fix: apply dark mode

--- a/packages/mz-client/src/styles/Button.module.scss
+++ b/packages/mz-client/src/styles/Button.module.scss
@@ -67,6 +67,10 @@
     border-radius: 50px;
     padding: 0 20px;
 
+    @at-root #{&}.dark {
+      background: white; // 다크 모드에서의 color 스타일
+    }
+
     @media (hover: hover) {
       &:hover:not(:disabled) {
         opacity: 0.8;
